Update balance terminology: change 'Internal Balance' to 'Wallet Balance' and 'External Balance' to 'App Balance'

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                                     <th>Base Address</th>
                                     <th>Status</th>
                                     <th>Authentication</th>
-                                    <th>Internal Balance</th>
-                                    <th>External Balance</th>
+                                    <th>Wallet Balance</th>
+                                    <th>App Balance</th>
                                     <th>Reputation</th>
                                     <th>Verification</th>
                                 </tr>
@@ -374,7 +374,7 @@
                         <h6>4. Account Migration Status</h6>
                         <ul>
                             <li>User shown personalized migration dashboard</li>
-                            <li>Status cards show: Internal Balance, External Balance, Reputation</li>
+                            <li>Status cards show: Wallet Balance, App Balance, Reputation</li>
                             <li>Clear indication of tokens available to claim</li>
                         </ul>
                     </div>
