--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                                     <td><span class="text-monospace small">0x59fbc3f8c13E5199482Fe2142d713aC3D11a30Ed</span></td>
                                     <td><span class="badge bg-warning text-dark">Partial</span></td>
                                     <td><span class="badge bg-primary">X (Twitter)</span></td>
-                                    <td>1</td>
                                     <td>1.37</td>
+                                    <td>1</td>
                                     <td>0</td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
                                 </tr>
@@ -205,7 +205,7 @@
                                             <td><code class="small">0x59fbc3f8c13E5199482Fe2142d713aC3D11a30Ed</code></td>
                                             <td>1.00 TALNT</td>
                                             <td>0</td>
-                                            <td><span class="badge bg-warning text-dark">Partial</span></td>
+                                            <td><span class="badge bg-success">Verified</span></td>
                                         </tr>
                                         <tr>
                                             <td>Keith Fellini</td>
