--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                                             <th>EVM Address</th>
                                             <th>Contract Balance</th>
                                             <th>Contract Locked Balance</th>
+                                            <th>External Balance</th>
                                             <th>Contract Reputation</th>
                                             <th>Status</th>
                                         </tr>
@@ -192,6 +193,7 @@
                                             <td><code class="small">0x476bB9fADF338B7cB58D9775ab6E635faA042B47</code></td>
                                             <td>686.26 TALNT</td>
                                             <td>0 TALNT</td>
+                                            <td>55.88 TALNT</td>
                                             <td>40.45</td>
                                             <td><span class="badge bg-success">Verified</span></td>
                                         </tr>
@@ -200,6 +202,7 @@
                                             <td><code class="small">0x3cb71e6Cacc83cb41FF3Ac7f45f4E5FF849891D3</code></td>
                                             <td>6.06 TALNT</td>
                                             <td>0 TALNT</td>
+                                            <td>0.98 TALNT</td>
                                             <td>0</td>
                                             <td><span class="badge bg-success">Verified</span></td>
                                         </tr>
@@ -208,6 +211,7 @@
                                             <td><code class="small">0x59fbc3f8c13E5199482Fe2142d713aC3D11a30Ed</code></td>
                                             <td>1.00 TALNT</td>
                                             <td>0 TALNT</td>
+                                            <td>1.37 TALNT</td>
                                             <td>0</td>
                                             <td><span class="badge bg-success">Verified</span></td>
                                         </tr>
@@ -216,6 +220,7 @@
                                             <td><code class="small">0x95d8eee141DFf4961233B12e140b771f798fEBeB</code></td>
                                             <td>194.90 TALNT</td>
                                             <td>0 TALNT</td>
+                                            <td>3080.89 TALNT</td>
                                             <td>0</td>
                                             <td><span class="badge bg-success">Verified</span></td>
                                         </tr>
@@ -226,6 +231,7 @@
                                 <strong>Contract Address:</strong> <code>0xf31b1860d20Bc1CaBCB16B9F08F8783B0eb4a59d</code> on Base L3 Testnet
                                 <br>
                                 <small class="d-block mt-2">Verification performed using the <code>getBalance(address)(uint256)</code>, <code>getLockedBalance(address)(uint256)</code>, and <code>getUserReputation(address)(uint256)</code> functions</small>
+                                <small class="d-block mt-2">External Balance data retrieved using <code>getUserExternalBalance(string)(uint256)</code> function from BAILEE_CUTOVER_EXTERNAL_BALANCE contract at <code>0xE4D297078f8678b6C9c746A3485409F2c011c156</code></small>
                             </div>
                         </div>
                     </div>
