Update character profiles: set Smart Contract Assignment to Completed and remove Block Hash fields

--- a/character-detail-keith.html
+++ b/character-detail-keith.html
@@ -110,7 +110,6 @@
                                 <p><strong>External Balance:</strong> <span class="text-primary">194.9</span></p>
                                 <p><strong>Total Balance:</strong> <span class="text-danger">3275.59</span></p>
                                 <p><strong>Reputation Score:</strong> <span class="text-secondary">0</span></p>
-                                <p><strong>Block Hash:</strong> <code>tz1VX9pnQepjrza4vVpyE9ddM8cJJL4iAWq9</code></p>
                             </div>
                         </div>
                     </div>
@@ -156,7 +155,7 @@
                                     <tr>
                                         <td>2. Smart Contract Assignment</td>
                                         <td>Check EVM address mapping in contract</td>
-                                        <td><span class="badge bg-secondary">Not Started</span></td>
+                                        <td><span class="badge bg-success">Completed</span></td>
                                     </tr>
                                     <tr>
                                         <td>3. User Authentication</td>
