--- a/character-detail-twitter.html
+++ b/character-detail-twitter.html
@@ -110,7 +110,6 @@
                                 <p><strong>External Balance:</strong> <span class="text-primary">0</span></p>
                                 <p><strong>Total Balance:</strong> <span class="text-danger">2.39</span></p>
                                 <p><strong>Reputation Score:</strong> <span class="text-secondary">0</span></p>
-                                <p><strong>Block Hash:</strong> <code>tz2GYLLxLJQyceXu1aqVALbpxKjfKf4q9Zog</code></p>
                             </div>
                         </div>
                     </div>
@@ -156,7 +155,7 @@
                                     <tr>
                                         <td>2. Smart Contract Assignment</td>
                                         <td>Check EVM address mapping in contract</td>
-                                        <td><span class="badge bg-secondary">Not Started</span></td>
+                                        <td><span class="badge bg-success">Completed</span></td>
                                     </tr>
                                     <tr>
                                         <td>3. User Authentication</td>
