Update character profiles: change Base L3 Migration Target to Base Appchain Migration Target and remove specified status fields

--- a/character-detail-herner.html
+++ b/character-detail-herner.html
@@ -117,7 +117,7 @@
                     <div class="col-md-6">
                         <div class="card mb-4">
                             <div class="card-header bg-warning text-dark">
-                                <h4 class="h5 mb-0">Base L3 Migration Target</h4>
+                                <h4 class="h5 mb-0">Base Appchain Migration Target</h4>
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Values to Preserve</h5>
@@ -126,7 +126,6 @@
                                 <p><strong>External Balance Target:</strong> <span class="text-primary">0.98</span></p>
                                 <p><strong>Total Balance Target:</strong> <span class="text-danger">7.04</span></p>
                                 <p><strong>Reputation Target:</strong> <span class="text-secondary">0</span></p>
-                                <p><strong>2FA Status:</strong> <span class="text-success">Must remain enabled</span></p>
                             </div>
                         </div>
                     </div>
