--- a/character-detail-twitter.html
+++ b/character-detail-twitter.html
@@ -118,7 +118,7 @@
                     <div class="col-md-6">
                         <div class="card mb-4">
                             <div class="card-header bg-warning text-dark">
-                                <h4 class="h5 mb-0">Base L3 Migration Target</h4>
+                                <h4 class="h5 mb-0">Base Appchain Migration Target</h4>
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Values to Preserve</h5>
@@ -128,7 +128,6 @@
                                 <p><strong>Total Balance Target:</strong> <span class="text-danger">2.39</span></p>
                                 <p><strong>Reputation Target:</strong> <span class="text-secondary">0</span></p>
                                 <p><strong>Social Auth Status:</strong> <span class="text-info">Must preserve X connection</span></p>
-                                <p><strong>Discord Access:</strong> <span class="text-info">Must preserve DCP Discord portal integration</span></p>
                             </div>
                         </div>
                     </div>
