Add introduction section explaining dashboard purpose for tracking migration status of test accounts

--- a/index.html
+++ b/index.html
@@ -37,6 +37,44 @@
         </div>
     </nav>
 
+    <!-- Introduction section that explains the purpose of the dashboard -->
+    <div class="bg-light py-4 mb-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="display-5 mb-3">DCP Migration Testing Dashboard</h1>
+                    <p class="lead">
+                        This dashboard tracks the migration status of four test accounts from the Tezos blockchain to the Base Appchain, 
+                        ensuring that all user data is correctly replicated and preserved during the transition.
+                    </p>
+                    <p>
+                        We carefully monitor the following user attributes to verify migration integrity:
+                    </p>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul class="list-group mb-3">
+                                <li class="list-group-item"><i class="bi bi-currency-exchange me-2 text-primary"></i> Token balances (internal, external, and locked)</li>
+                                <li class="list-group-item"><i class="bi bi-graph-up-arrow me-2 text-success"></i> Reputation scores</li>
+                                <li class="list-group-item"><i class="bi bi-person-badge me-2 text-warning"></i> Authentication status</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul class="list-group mb-3">
+                                <li class="list-group-item"><i class="bi bi-shield-check me-2 text-info"></i> Verification status</li>
+                                <li class="list-group-item"><i class="bi bi-bug me-2 text-danger"></i> Bug reports and platform feedback</li>
+                                <li class="list-group-item"><i class="bi bi-wallet me-2 text-secondary"></i> Wallet connection capabilities</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <p>
+                        Each test account represents a different user profile with unique characteristics to ensure comprehensive testing 
+                        of the migration process across various use cases and authentication methods.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container mt-4">
         <div class="row mb-4">
             <div class="col-12">
