Update all Base L3 references to Base Appchain for consistency across the dashboard

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <tr>
                                     <th>Account Name</th>
                                     <th>Tezos Address</th>
-                                    <th>Base Address</th>
+                                    <th>Base Appchain Address</th>
                                     <th>Authentication</th>
                                     <th>Wallet Balance</th>
                                     <th>App Balance</th>
@@ -211,7 +211,7 @@
                             <h3 class="h5 mb-0">EVM Ledger Contract Verification</h3>
                         </div>
                         <div class="card-body">
-                            <p class="mb-3">Onchain verification results from the FilmLedger smart contract calls on Base L3:</p>
+                            <p class="mb-3">Onchain verification results from the FilmLedger smart contract calls on Base Appchain:</p>
                             <div class="table-responsive">
                                 <table class="table table-sm">
                                     <thead class="table-light">
@@ -266,7 +266,7 @@
                                 </table>
                             </div>
                             <div class="alert alert-info mt-3 mb-0">
-                                <strong>Contract Address:</strong> <code>0xf31b1860d20Bc1CaBCB16B9F08F8783B0eb4a59d</code> on Base L3 Testnet
+                                <strong>Contract Address:</strong> <code>0xf31b1860d20Bc1CaBCB16B9F08F8783B0eb4a59d</code> on Base Appchain Testnet
                                 <br>
                                 <small class="d-block mt-2">Verification performed using the <code>getBalance(address)(uint256)</code>, <code>getLockedBalance(address)(uint256)</code>, and <code>getUserReputation(address)(uint256)</code> functions</small>
                                 <small class="d-block mt-2">External Balance data retrieved using <code>getUserExternalBalance(string)(uint256)</code> function from BAILEE_CUTOVER_EXTERNAL_BALANCE contract at <code>0xE4D297078f8678b6C9c746A3485409F2c011c156</code></small>
@@ -294,7 +294,7 @@
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="ms-2 me-auto">
                                         <div class="fw-bold">Base Smart Contract Assignment</div>
-                                        Assign cutover address in Base L3 smart contract
+                                        Assign cutover address in Base Appchain smart contract
                                     </div>
                                     <span class="badge bg-primary rounded-pill">Complete</span>
                                 </li>
@@ -357,7 +357,7 @@
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="ms-2 me-auto">
                                         <div class="fw-bold">Token Distribution</div>
-                                        Upon successful signature, smart contract transfers tokens to user's Base wallet
+                                        Upon successful signature, smart contract transfers tokens to user's Base Appchain wallet
                                     </div>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
@@ -444,7 +444,7 @@
                         <ul>
                             <li>Success confirmation with transaction details</li>
                             <li>Updated balance displayed</li>
-                            <li>Guided tour of new Base L3 features</li>
+                            <li>Guided tour of new Base Appchain features</li>
                             <li>Option to download transaction receipt</li>
                         </ul>
                     </div>
