--- a/index.html
+++ b/index.html
@@ -89,40 +89,6 @@
         <section id="dashboard" class="mb-5">
             <h2>Migration Setup</h2>
             <div class="row">
-                <div class="col-xl-6 col-md-8 mb-4">
-                    <div class="card border-left-secondary shadow h-100 py-2">
-                        <div class="card-body">
-                            <div class="row no-gutters align-items-center">
-                                <div class="col mr-2">
-                                    <div class="text-xs font-weight-bold text-secondary text-uppercase mb-1">
-                                        Migration Setup Guide</div>
-                                    <a href="setup-guide.html" class="h5 mb-0 font-weight-bold text-gray-800 d-block">View Guide</a>
-                                </div>
-                                <div class="col-auto">
-                                    <i class="bi bi-file-earmark-text fa-2x text-gray-300"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6 col-md-8 mb-4">
-                    <div class="card border-left-primary shadow h-100 py-2">
-                        <div class="card-body">
-                            <div class="row no-gutters align-items-center">
-                                <div class="col mr-2">
-                                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                        Test Character Profiles</div>
-                                    <a href="characters.html" class="h5 mb-0 font-weight-bold text-gray-800 d-block">View Characters</a>
-                                </div>
-                                <div class="col-auto">
-                                    <i class="bi bi-people fa-2x text-gray-300"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-12">
                     <div class="alert alert-info">
                         <strong>Migration Code Repository:</strong> <a href="https://github.com/Decentralized-Pictures/dcp-migrations" target="_blank">github.com/Decentralized-Pictures/dcp-migrations</a>
@@ -200,6 +166,25 @@
                                 </tr>
                             </tbody>
                         </table>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-4 mb-4">
+                <div class="col-xl-6 col-md-8">
+                    <div class="card border-left-primary shadow h-100 py-2">
+                        <div class="card-body">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                        Test Character Profiles</div>
+                                    <a href="characters.html" class="h5 mb-0 font-weight-bold text-gray-800 d-block">View Characters</a>
+                                </div>
+                                <div class="col-auto">
+                                    <i class="bi bi-people fa-2x text-gray-300"></i>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
