--- a/index.html
+++ b/index.html
@@ -52,23 +52,38 @@
                     </p>
                     <div class="row">
                         <div class="col-md-6">
-                            <ul class="list-group mb-3">
-                                <li class="list-group-item"><i class="bi bi-currency-exchange me-2 text-primary"></i> Token balances (internal, external, and locked)</li>
-                                <li class="list-group-item"><i class="bi bi-graph-up-arrow me-2 text-success"></i> Reputation scores</li>
-                                <li class="list-group-item"><i class="bi bi-person-badge me-2 text-warning"></i> Authentication status</li>
-                            </ul>
+                            <div class="card h-100">
+                                <div class="card-header bg-primary text-white">
+                                    <h5 class="mb-0">Migration Specific Properties</h5>
+                                </div>
+                                <div class="card-body">
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item"><i class="bi bi-currency-exchange me-2 text-primary"></i> Token balances (internal, external, and locked)</li>
+                                        <li class="list-group-item"><i class="bi bi-graph-up-arrow me-2 text-success"></i> Reputation scores</li>
+                                        <li class="list-group-item"><i class="bi bi-person-badge me-2 text-warning"></i> Authentication status</li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-md-6">
-                            <ul class="list-group mb-3">
-                                <li class="list-group-item"><i class="bi bi-shield-check me-2 text-info"></i> Verification status</li>
-                                <li class="list-group-item"><i class="bi bi-bug me-2 text-danger"></i> Bug reports and platform feedback</li>
-                                <li class="list-group-item"><i class="bi bi-wallet me-2 text-secondary"></i> Wallet connection capabilities</li>
-                            </ul>
+                            <div class="card h-100">
+                                <div class="card-header bg-info text-white">
+                                    <h5 class="mb-0">Possible Regression Areas</h5>
+                                </div>
+                                <div class="card-body">
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item"><i class="bi bi-shield-check me-2 text-info"></i> Verification status</li>
+                                        <li class="list-group-item"><i class="bi bi-bug me-2 text-danger"></i> Bug reports and platform feedback</li>
+                                        <li class="list-group-item"><i class="bi bi-wallet me-2 text-secondary"></i> Wallet connection capabilities</li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <p>
+                    <p class="mt-3">
                         Each test account represents a different user profile with unique characteristics to ensure comprehensive testing 
-                        of the migration process across various use cases and authentication methods.
+                        of the migration process across various use cases and authentication methods. By monitoring both migration-specific properties 
+                        and possible regression areas, we can ensure a complete and successful transition with minimal user impact.
                     </p>
                 </div>
             </div>
