--- a/index.html
+++ b/index.html
@@ -328,25 +328,28 @@
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="ms-2 me-auto">
                                         <div class="fw-bold">Eligibility Check</div>
-                                        System verifies user's account exists in migration smart contract
+                                        System verifies user's account exists in the mongo database
                                     </div>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="ms-2 me-auto">
                                         <div class="fw-bold">Claim Notification</div>
                                         User is notified of available tokens and balance amounts to claim
+                                        <small class="d-block text-muted mt-1">Note: This step is for non-social wallets</small>
                                     </div>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="ms-2 me-auto">
                                         <div class="fw-bold">Signature Request</div>
                                         User prompted to sign transaction with wallet to verify identity
+                                        <small class="d-block text-muted mt-1">Note: This step is for non-social wallets</small>
                                     </div>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="ms-2 me-auto">
                                         <div class="fw-bold">Token Distribution</div>
-                                        Upon successful signature, smart contract transfers tokens to user's Base Appchain wallet
+                                        Upon successful signature, smart contract transfers tokens to user's Base Appchain wallet and NFTs to Base layer
+                                        <small class="d-block text-muted mt-1">Note: Tokens go to Base Appchain, NFTs go to Base layer</small>
                                     </div>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
