--- a/index.html
+++ b/index.html
@@ -118,7 +118,6 @@
                                     <th>Authentication</th>
                                     <th>Wallet Balance</th>
                                     <th>App Balance</th>
-                                    <th>Locked Balance</th>
                                     <th>Reputation</th>
                                     <th>NFT</th>
                                     <th>Verification</th>
@@ -132,7 +131,6 @@
                                     <td><span class="badge bg-info">Google Auth</span> <span class="badge bg-warning text-dark">Moderator</span></td>
                                     <td>55.88</td>
                                     <td>684.61</td>
-                                    <td>0</td>
                                     <td>40.4</td>
                                     <td>1</td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
@@ -146,7 +144,6 @@
                                     <td>6.06</td>
                                     <td>0</td>
                                     <td>0</td>
-                                    <td>0</td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
                                 </tr>
                                 <tr id="account-twitter">
@@ -158,7 +155,6 @@
                                     <td>1</td>
                                     <td>0</td>
                                     <td>0</td>
-                                    <td>0</td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
                                 </tr>
                                 <tr id="account-keith">
@@ -168,7 +164,6 @@
                                     <td><span class="badge bg-success">Sentinel Wallet</span></td>
                                     <td>3080.69</td>
                                     <td>194.9</td>
-                                    <td>0</td>
                                     <td>0</td>
                                     <td>0</td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
@@ -213,9 +208,9 @@
                                             <th>User</th>
                                             <th>EVM Address</th>
                                             <th>Contract Balance</th>
-                                            <th>Contract Locked Balance</th>
                                             <th>External Balance</th>
                                             <th>Contract Reputation</th>
+                                            <th>NFT</th>
                                             <th>Status</th>
                                         </tr>
                                     </thead>
@@ -224,17 +219,17 @@
                                             <td>Kanley Stubrick</td>
                                             <td><code class="small">0x476bB9fADF338B7cB58D9775ab6E635faA042B47</code></td>
                                             <td>686.26 TALNT</td>
-                                            <td>0 TALNT</td>
                                             <td>55.88 TALNT</td>
                                             <td>40.45</td>
+                                            <td>1</td>
                                             <td><span class="badge bg-success">Verified</span></td>
                                         </tr>
                                         <tr>
                                             <td>Herner werzog</td>
                                             <td><code class="small">0x3cb71e6Cacc83cb41FF3Ac7f45f4E5FF849891D3</code></td>
                                             <td>6.06 TALNT</td>
-                                            <td>0 TALNT</td>
                                             <td>0.98 TALNT</td>
+                                            <td>0</td>
                                             <td>0</td>
                                             <td><span class="badge bg-success">Verified</span></td>
                                         </tr>
@@ -242,8 +237,8 @@
                                             <td>TwitterProd</td>
                                             <td><code class="small">0x59fbc3f8c13E5199482Fe2142d713aC3D11a30Ed</code></td>
                                             <td>1.00 TALNT</td>
-                                            <td>0 TALNT</td>
                                             <td>1.37 TALNT</td>
+                                            <td>0</td>
                                             <td>0</td>
                                             <td><span class="badge bg-success">Verified</span></td>
                                         </tr>
@@ -251,8 +246,8 @@
                                             <td>Keith Fellini</td>
                                             <td><code class="small">0x95d8eee141DFf4961233B12e140b771f798fEBeB</code></td>
                                             <td>194.90 TALNT</td>
-                                            <td>0 TALNT</td>
                                             <td>3080.89 TALNT</td>
+                                            <td>0</td>
                                             <td>0</td>
                                             <td><span class="badge bg-success">Verified</span></td>
                                         </tr>
